fix: Fixing TypeScript version.

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "winston": "^3.18.3"
   },
   "devDependencies": {
-    "dotenv": "^17.2.3",
+    "@types/node": "^24.10.0",
     "bun-types": "latest",
-    "prisma": "^6.19.0"
+    "dotenv": "^17.2.3",
+    "prisma": "^6.19.0",
+    "typescript": "^5.9.3"
   },
   "module": "src/index.js",
   "license": "MIT",
