--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "bull": "^4.16.5",
     "drizzle-orm": "^0.44.7",
     "elysia": "latest",
-    "postgres": "^3.4.7",
+    "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "uuid": "^13.0.0",
     "winston": "^3.18.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
+    "@types/pg": "^8.15.6",
     "bun-types": "latest",
     "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.6",
