--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@elysiajs/swagger": "^1.3.1",
+    "@prisma/client": "^6.19.0",
     "bull": "^4.16.5",
     "elysia": "latest",
     "pg": "^8.16.3",
