--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@elysiajs/swagger": "^1.3.1",
     "@prisma/client": "^6.19.0",
     "bull": "^4.16.5",
-    "elysia": "latest",
+    "elysia": "1.4.15",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
     "uuid": "^13.0.0",
