--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "drizzle-orm": "^0.44.7",
     "elysia": "1.4.15",
     "pg": "^8.16.3",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2",
     "prisma": "^6.19.0",
     "uuid": "^13.0.0",
     "winston": "^3.18.3"
