feat: update Vercel configuration and scripts for improved deployment process

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "bunVersion": "1.x",
-  "buildCommand": "bun run build:vercel"
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "public" }
+    },
+    { "src": "src/server.ts", "use": "@vercel/elysia" }
+  ]
 }
