--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "test": "bun test",
     "dev": "bun run --watch src/server.ts",
-    "build:vercel": "bun run ./scripts/build-vercel.ts",
     "start": "bun run src/server.ts",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -15,6 +14,7 @@
     "drizzle:studio": "drizzle-kit studio",
     "migrate": "bun run drizzle:migrate",
     "deploy": "vercel deploy --prod",
+    "vercel-build": "echo 'Building static assets for Vercel...'",
     "postinstall": "drizzle-kit generate"
   },
   "dependencies": {
